# NewProjectTemplate

./: .travis.yml  CMakeLists.txt
cmake/: AddCatch2.cmake  AddTrompeloeil.cmake
include/: HelperFunctions.h  Precompiled.h
include/detail/: ErrHandler.hpp  ExprToType.hpp  Precompiled.hpp  StringUtils.hpp  TimeMeasurment.hpp  Tokeniser.hpp
include/details/: HelperFunctions.h
include/lib/: lib.hpp
src/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  lib.cpp
src/myLib/: CMakeLists.txt  myLib.cpp
test/: CMakeLists.txt
tests/: CMakeLists.txt  Tests.cpp  testMain.cpp
